name:                sqlite-ranger
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable sqlite-ranger
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7,
                       mtl >= 2 && < 3,
                       text >=1.0 && <2.0,
                       direct-sqlite == 2.3.11,
                       ncurses >= 0.2 && < 0.3,
                       safe >= 0.3 && < 0.4,
                       transformers == 0.3.0.0

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
